fixed gaps on video page

--- a/css/style.css
+++ b/css/style.css
@@ -4071,6 +4071,7 @@ div[data-icon] {
     .tour-block__banner-container .benefits-banner__promo {
         font-size: 20px;
     }
+    #videos-page .videos-block__container,
     .header__container,
     .slider-block__container,
     .videos-block__container,
